# openclaw-scanner

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix
src/: config.rs  daemon.rs  error.rs  lib.rs  main.rs  reattestation.rs
src/api/: routes.rs
src/assessors/: attestation.rs  compliance.rs  mod.rs  opa.rs  revocation.rs  sbom.rs
src/reporters/: audit_log.rs  metrics.rs  mod.rs  webhook.rs
src/watchers/: config_watcher.rs  falco_watcher.rs  mod.rs  model_watcher.rs  skill_watcher.rs
