[package]
name = "openclaw-scanner"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Pleme Team <team@pleme.io>"]
description = "Continuous compliance scanning daemon for OpenClaw agents"
license = "MIT"
repository = "https://github.com/pleme-io/openclaw-scanner"

[lib]
name = "openclaw_scanner"
path = "src/lib.rs"

[[bin]]
name = "openclaw-scanner"
path = "src/main.rs"

[dependencies]
tameshi = "0.1"
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-graphql = { version = "7.0", features = ["chrono", "tracing"] }
async-graphql-axum = "7.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = { version = "0.8", features = ["chrono"] }
notify = "7"

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
